further overflow fixes

--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,10 @@ aside {
     box-sizing: border-box;
     vertical-align:top;
 }
-
 #reviewblocks a {
     font-style:italic;
     color:#ddddc3;
 }
-
 #bioimg {
     width:20%;
     height:auto;
@@ -109,11 +107,10 @@ aside {
     padding: 20px;
     shape-outside: circle();
 }
-
 #Titlediv {
  font-size: 1.6em;
  font-family: 'Roboto', sans-serif;
- padding: 0% 2% 30% 2%;
+ padding: 0% 0% 30% 0%;
  margin: 0% 0 20% 0;
 }
 
@@ -311,6 +308,8 @@ a:visited:not(.active) {
          font-size: .85em;
          width:100%;
          margin: 1.7em 0 15em 0;
+         box-sizing: border-box;
+         padding: 0;
     }
     #Headersection {
       background-color: #dddfd4;
@@ -326,7 +325,7 @@ a:visited:not(.active) {
     #Biosection,#Photossection,#Reviewssection,#Contactsection{
         width:100%;
         box-sizing: border-box;
-        margin: 0 0 2em 0;
+        margin: 1em 0;
         padding:0;
         text-align:center;
     }
